--- a/attandance/src/main/resources/templates/attendance/form.html
+++ b/attandance/src/main/resources/templates/attendance/form.html
@@ -98,7 +98,7 @@
                 </select>
             </div>
             <div class="form-group" id="userSelect">
-                <label for="typeSelect">Trenér</label>
+                <label for="user">Trenér</label>
                 <select class="custom-select" id="user">
                 </select>
             </div>
