--- a/attandance/src/main/resources/templates/users/index.html
+++ b/attandance/src/main/resources/templates/users/index.html
@@ -20,7 +20,7 @@
     $(document).ready(function () {
         let clients = [];
         $.ajax({
-            url: "api/v1/user",
+            url: "/api/v1/user",
             data: "json",
             contentType: "application/json",
             method: "GET"
