--- a/attandance/src/main/resources/templates/users/detail.html
+++ b/attandance/src/main/resources/templates/users/detail.html
@@ -10,7 +10,7 @@
 <span> </span>
 
 <div class="page-content">
-    <button type="button1" class="basic-btn">button1</button>
+    <button type="button1" class="basic-btn editButton"><a href="/edit">Editace</a></button>
     <button type="button2" class="basic-btn">button2</button>
 
     <div class="nadpis">
